--- a/public/screen.css
+++ b/public/screen.css
@@ -6,4 +6,83 @@ body {
   margin: 0;
   min-height: 100%;
   font: 16px / 1 sans-serif;
+  background-color: lightblue; 
+}
+
+.weather-app {
+  margin: auto;
+  width: 300px;
+  height: 160px;
+  border: 1px solid black;
+  border-radius: 20px;
+  box-shadow: 10px 10px 50px #888888;
+  overflow: hidden;
+  text-align:center;
+  font-family: "Mono";
+}
+
+.left {
+  float: left;
+  background: darkblue;
+  padding:10px;
+  width:150px;
+  height:100%;
+  color:white;
+}
+
+.temperature {
+  margin-top:30px;
+  margin-bottom:5px;
+  font-size:32px;
+  font-weight: bold;
+  width: 150px;
+}
+
+.location {
+  font-size: 18px;
+  width:100%;
+  width:150px;
+}
+
+.right {
+  float: right;
+  width:130px;
+  height:100%;
+}
+
+.top {
+  height: 100px;
+  width: 100%;
+  margin: auto;
+  background: #cec;
+}
+
+.top img {
+  margin-top: 15px;
+}
+
+.bottom {
+  height: 70px;
+  background: #669999;
+  color: white;
+  font-weight: bold;
+}
+
+.humidity {
+  padding: 8px;
+}
+
+.Yo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+h1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  font-size: 50px;
+  top: 250px;
+  position: relative;
 }
